--- a/_config.yml
+++ b/_config.yml
@@ -600,7 +600,7 @@ content:
       <br><br>
 
       #### Visa Status
-      My US green card is to be issued around October, 2024 via EB2-NIW.
+      My US green card is to be issued in December, 2024 via EB2-NIW.
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
