--- a/_config.yml
+++ b/_config.yml
@@ -407,6 +407,16 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
+        title: Huawei Technologies Switzerland
+        sub_title: Senior Research Scientist in Computing Systems.
+        caption: MAY 2025 - CURRENT
+        link: https://www.huawei.com/ch-en/corporate-information/local-states
+        description: | # this will include new lines to allow paragraphs
+          <div style="text-align: center;">
+          <img src="https://www-file.huawei.com/-/media/corporate/images/home/logo/huawei_logo.png" alt="huawei logo" height="50"/>
+          </div>
+          - Senior Research Scientist in Computing Systems, focusing on OS, Storage, and Memory
+      - layout: left
         title: FriendliAI
         sub_title: AI System Engineer/Researcher.
         caption: SEPT 2023 - JAN 2025
@@ -603,7 +613,7 @@ content:
       <br><br>
 
       #### Visa Status
-      My US green card is to be issued in Spring 2025 via EB2-NIW.
+      US green card via EB2-NIW.
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
